captcha environment variables

--- a/SecureSkyScholars/students_app/templates/login.html
+++ b/SecureSkyScholars/students_app/templates/login.html
@@ -48,7 +48,7 @@
           </div>
         </div>
         <div class="input-group mb-3">
-                <div class="g-recaptcha" data-sitekey=RECAPTCHA_PUBLIC_KEY></div>
+                <div class="g-recaptcha" data-sitekey="{{ recaptcha_public_key }}"></div>
         </div>
         <div class="row">
           <!-- /.col -->
